# claudify

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  README.zh-CN.md  build-claudify.sh  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: protocol-mapping.md
src/claudify/: __init__.py  __main__.py  app.py  cli.py  conversion.py  errors.py  metrics.py  retry.py  routes.py  settings.py  sse.py
src/claudify/service/: launchd.py  systemd.py
tests/: conftest.py  test_app.py  test_cli.py  test_conversion.py  test_e2e_sse.py  test_edge_cases.py  test_observability.py  test_settings.py  test_sse_parser.py
